--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@sushiswap/sdk",
+  "name": "@kobeswap/sdk",
   "license": "MIT",
   "version": "3.0.1",
-  "description": "🛠 An SDK for building applications on top of Sushiswap.",
+  "description": "🛠 An SDK for building applications on top of Kobeswap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/sushiswap/sushiswap-sdk",
+  "repository": "https://github.com/Iwan-lab/kobeswap-sdk",
   "keywords": [
     "uniswap",
-    "sushiswap",
+    "kobeswap",
     "ethereum"
   ],
   "module": "dist/sdk.esm.js",
