--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@kobeswap/sdk",
+  "name": "@iwanwang/sdk",
   "license": "MIT",
-  "version": "3.0.1",
+  "version": "0.0.1",
   "description": "🛠 An SDK for building applications on top of Kobeswap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
